fix: change central aligning method

--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 html {
   background-color: rgb(107, 158, 179);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body {
-  width: 1200px;
-  min-height: 100vh;
-  margin: 0 auto;
-  padding: 40px 110px 80px;
-  box-sizing: border-box;
-
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+  max-width: 1200px;
+  min-height: 100vh;
+  margin: 0 10px;
+  padding: 40px 110px 80px;
 
   background-color: #fff;
   font-family: 'Roboto', sans-serif;
